@@ -69,6 +69,12 @@ Library
 
 - Issue #17481: inspect.getfullargspec() now uses inspect.signature() API.
 
+- Issue #15304: concurrent.futures.wait() can block forever even if
+  Futures have completed. Patch by Glenn Langford.
+
+Fix warning message when `os.chdir()` fails inside
+  `test.support.temp_cwd()`.  Patch by Chris Jerdonek.
+
 IDLE
 ----
 
